--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.0
   equatable: ^2.0.0
+  flutter_bloc: ^7.0.0
   get_it: ^6.0.0
 
 dev_dependencies:
